infrastructure/kgateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: https
  namespace: kgateway-system
  annotations:
    cert-manager.io/cluster-issuer: root-rpcu
    kgateway.dev/per-connection-buffer-limit: "128Mi"
spec:
  gatewayClassName: kgateway
  allowedListeners:
    namespaces:
      from: All
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gwp-static-ip
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      hostname: "*.rpcu.vpn"
      allowedRoutes:
        namespaces:
          from: All
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "*.rpcu.vpn"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: rpcu-vpn-wildcard-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: kgateway-system # Namespace of the Gateway
  # annotations:
  #   external-dns.alpha.kubernetes.io/controller: ignore # Only if ExternalDNS is enabled
spec:
  parentRefs:
    - name: https
      sectionName: http
      namespace: kgateway-system
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
